[IMP] Add customer_id field for translation

--- a/gift_card_design/views/gift_card_design_templates.xml
+++ b/gift_card_design/views/gift_card_design_templates.xml
@@ -42,6 +42,7 @@
         <field name="arch" type="xml">
             <xpath expr="//group[@name='gift_card']" position="inside">
                 <field name="product_template_id" domain="[('detailed_type','=', 'gift')]"/>
+                <field name="customer_id"/>
             </xpath>
         </field>
     </record>
