--- a/website_sale_delivery_withdrawal/static/src/css/website_sale_delivery_withdrawal.css
+++ b/website_sale_delivery_withdrawal/static/src/css/website_sale_delivery_withdrawal.css
@@ -1,72 +1,210 @@
-.addressCard {
-    display: block;
-    padding-left: 5%;
-    height: 8vh
+@media (min-width: 250px) {
+    hr {
+        border-top: 3px solid #bbb;
+        display: block !important;
+    }
+
+    .WP_RList {
+        width: 100%;
+        height: 100%;
+        max-height: 30vh;
+        overflow-y: auto;
+        padding-right: 2%;
+        margin-right: 6%
+    }
+
+    .WP_RDaysList {
+        width: 100%;
+        height: 100%;
+        max-height: 450px;
+        overflow-y: auto;
+        padding-right: 2%;
+    }
+
+    .WPDate {
+        display: flex;
+        flex-direction: column;
+        padding: 1vh;
+        justify-content: center;
+        float: left;
+        width: 30%;
+        text-align: center;
+        border-right: 2px solid lightgray;
+        height: 100%;
+        background-color: #e9e9e9
+    }
 }
 
-.addressCard.active {
-    background-color: #e9e9e9
+/* From 768px and up */
+@media (min-width: 768px) {
+    hr {
+        display: none !important;
+    }
+
+    .WP_RList {
+        width: 45%;
+        height: 100%;
+        max-height: 450px;
+        overflow-y: auto;
+        padding-right: 2%;
+        float: left;
+        margin-right: 6%
+    }
+
+    .WP_RDaysList {
+        width: 45%;
+        height: 100%;
+        max-height: 450px;
+        overflow-y: auto;
+        float: left;
+        padding-right: 2%;
+    }
+
+    .WPDate {
+        display: flex;
+        flex-direction: column;
+        padding: 1.5vh;
+        justify-content: center;
+        float: left;
+        width: 30%;
+        text-align: center;
+        border-right: 2px solid lightgray;
+        height: 100%;
+        background-color: #e9e9e9
+    }
 }
 
-.withdrawalCard {
+/* From 1024px and up */
+@media (min-width: 1024px) {
+    hr {
+        display: none !important;
+    }
+
+    .WP_RList {
+        width: 45%;
+        height: 100%;
+        max-height: 450px;
+        min-height: 450px;
+        overflow-y: auto;
+        padding-right: 2%;
+        float: left;
+        margin-right: 6%
+    }
+
+    .WP_RDaysList {
+        width: 45%;
+        height: 100%;
+        max-height: 450px;
+        min-height: 450px;
+        overflow-y: auto;
+        float: left;
+        padding-right: 2%;
+    }
+
+    .WPDate {
+        display: flex;
+        flex-direction: column;
+        padding: 3vh;
+        justify-content: center;
+        float: left;
+        width: 30%;
+        text-align: center;
+        border-right: 2px solid lightgray;
+        height: 100%;
+        background-color: #e9e9e9
+    }
+}
+
+.addressCard, .withdrawalCard {
     display: block;
     height: 8vh;
+    transition: 0.5s ease-in-out;
 }
 
-.withdrawalCard.active {
+.addressCard:hover, .withdrawalCard:hover {
+    border-color: #6E7993;
     background-color: #e9e9e9
 }
 
-.WP_RList {
-    width: 45%;
-    height: 100%;
-    max-height: 450px;
-    min-height: 450px;
-    overflow-y: auto;
-    float: left
+.addressCard.active, .withdrawalCard.active {
+    background-color: #e9e9e9
 }
 
-.WP_RArrow {
-    width: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.WPImage {
+    width: 25%;
+    float: left;
     height: 100%;
-    max-height: 450px;
-    min-height: 450px;
-    overflow-y: auto;
-    float: left
+    border-right: 2px solid lightgray;
 }
 
-.WP_RDaysList {
-    width: 45%;
-    height: 100%;
-    max-height: 450px;
-    min-height: 450px;
-    overflow-y: auto;
-    float: left
+.WPTitle {
+    max-height: 35%;
+    min-height: 35%;
+    font-size: 100%;
+    font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
-.WPDate {
+.WPStreet {
+    max-height: 35%;
+    min-height: 35%;
+    font-size: 80%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.WPCity {
+    max-height: 35%;
+    min-height: 35%;
+    font-size: 80%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.WPDay {
+    font-weight: bold;
+}
+
+.imgPartner {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.modalTitle {
+    font-weight: bold;
+}
+
+.WPInfos {
+    width: 75%;
+    height: 100%;
+    float: left;
+    padding-left: 5%;
+}
+
+.WPHours {
     display: flex;
     flex-direction: column;
-    padding: 3vh;
     justify-content: center;
     float: left;
-    width: 30%;
+    width: 70%;
     text-align: center;
-    border-right: 2px solid lightgray;
     height: 100%;
-    background-color: #e9e9e9
+    justify-content: space-around;
 }
 
 .WPHourSlot {
-    float: left;
     display: flex;
-    width: 70%;
-    height: 100%;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+}
+
+.WPHourSlot i {
+    float: left;
 }
 
 .WRListDivStreet {
@@ -77,9 +215,26 @@
 
 .WRListMapIcon {
     float: left;
-    width: 10%
 }
 
-.WRListLocation{
+.WRListLocation {
     float: left;
+}
+
+
+.WP_RDaysList::-webkit-scrollbar-track, .WP_RList::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+.WP_RDaysList::-webkit-scrollbar, .WP_RList::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+.WP_RDaysList::-webkit-scrollbar-thumb, .WP_RList::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
 }
