--- a/gift_card_design/views/gift_card_design_templates.xml
+++ b/gift_card_design/views/gift_card_design_templates.xml
@@ -65,7 +65,7 @@
         <field name="inherit_id" ref="gift_card.gift_card_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//group[@name='gift_card']" position="inside">
-                <field name="product_template_id" domain="[('detailed_type','=', 'gift')]"/>
+                <field name="product_id" domain="[('detailed_type','=', 'gift')]"/>
                 <field name="customer_id"/>
             </xpath>
         </field>
