--- a/gift_card_limited_to/views/gift_card_design_templates.xml
+++ b/gift_card_limited_to/views/gift_card_design_templates.xml
@@ -5,12 +5,17 @@
         <field name="model">gift.card</field>
         <field name="inherit_id" ref="gift_card.gift_card_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//group[@name='group_general']" position="inside">
-                <field name="limited" widget="checkbox"/>
-                <field name="limited_to" widget="radio" attrs="{'invisible': [('limited', '!=', True)]}"/>
-                <field name="limited_to_product_id" attrs="{'invisible': ['|', ('limited', '=', False), ('limited_to', '!=', 'product')]}"/>
-                <field name="limited_to_category_id" attrs="{'invisible': ['|', ('limited', '=', False), ('limited_to', '!=', 'category')]}"/>
-                <field name="limited_to_product_list" widget="many2many_tags" attrs="{'invisible': ['|', ('limited', '=', False), ('limited_to', '!=', 'product_list')]}"/>
+            <xpath expr="//group" position="after">
+                <group string="Limited usage">
+                    <field name="limited" widget="checkbox"/>
+                    <field name="limited_to" widget="radio" attrs="{'invisible': [('limited', '!=', True)]}"/>
+                    <field name="limited_to_product_id"
+                           attrs="{'invisible': ['|', ('limited', '=', False), ('limited_to', '!=', 'product')]}"/>
+                    <field name="limited_to_category_id"
+                           attrs="{'invisible': ['|', ('limited', '=', False), ('limited_to', '!=', 'category')]}"/>
+                    <field name="limited_to_product_list" widget="many2many_tags"
+                           attrs="{'invisible': ['|', ('limited', '=', False), ('limited_to', '!=', 'product_list')]}"/>
+                </group>
             </xpath>
         </field>
     </record>
